--- a/PolinomioCromatico/nbproject/project.properties
+++ b/PolinomioCromatico/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Modelo.grafos.GrafoMAdy
+main.class=Modelo.grafos.LinkedAdyListG
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
